--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -166,8 +166,9 @@
                     type: "POST",
                     url: $(this).attr("action"),
                     data: $(this).serialize(),
-                    success: function(data) {                   
-                        $.nette.success(data);
+                    success: function(payload) {                   
+                        $.nette.success(payload);
+                        
                     }
                 });
                 event.preventDefault();
