--- a/www/less/result.less
+++ b/www/less/result.less
@@ -26,6 +26,9 @@
 .week-input {
 	font-weight: bold;
 	float: left;
+	height: 30px;
+    margin-left: 5px;
+    width: 200px;
 }
 
 .ibox-title.modified {
