--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,6 +111,9 @@ label.error {
 .week-input {
   font-weight: bold;
   float: left;
+  height: 30px;
+  margin-left: 5px;
+  width: 200px;
 }
 .ibox-title.modified {
   padding-top: 10px;
