--- a/app/templates/Person/add-forNIX.latte
+++ b/app/templates/Person/add-forNIX.latte
@@ -6,7 +6,7 @@
         .wizard > .content > .body { position: relative; }
     </style>
 {/block}
-{block content}
+{block main}
 		<div class="row wrapper border-bottom white-bg page-heading slim">
 		    <div class="col-lg-10">
 		        <h2>Přidat osobu</h2>
