--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -5,7 +5,7 @@
     <!-- Sweet Alert -->
     <link href="{$basePath}/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 {/block}
-{block content}
+{block main}
 		<div class="row wrapper border-bottom white-bg page-heading slim">
 		    <div class="col-lg-10">
 		        <h2 n:block="title">Osoby</h2>
