--- a/app/templates/Book/list.latte
+++ b/app/templates/Book/list.latte
@@ -1,3 +1,4 @@
+{layout 'book.latte'}
 {block head}
     <!-- FooTable -->
     <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
@@ -6,54 +7,47 @@
     <link href="{$basePath}/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 {/block}
 {block content}
-		<div class="row wrapper border-bottom white-bg page-heading slim">
-		    <div class="col-lg-10">
-		        <h2 n:block="title">Knihy</h2>
-		    </div>
-		</div>
-        <div class="wrapper wrapper-content animated fadeInRight">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="ibox float-e-margins">
-                        <div class="ibox-title">
-                            {form categoryForm}
-                            <h5>{label category_id /}</h5>{input category_id, class => "form-control ibox-select", onchange => "submit();"}
-                            {/form}
-                        </div>
-                        <div class="ibox-content">
-                            <table class="table table-striped table-bordered table-hover" id="booksTable" data-page-size="20" >
-                                <thead>
-                                    <tr>
-                                        <th class="wide noselect">Titul</th>
-                                        <th class="noselect">Zkratka</th>
-                                        <th class="noselect">Kategorie</th>
-                                        <th data-sort-ignore="true" data-name="controls" class="controls"></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr n:foreach="$books as $book">
-                                        <td>{$book->title}</td>
-                                        <td>{$book->abbreviation}</td>
-                                        <td>{if $book->category_id}{$book->category->title}{/if}</td>
-                                        <td class="controls">
-                                            <a class="row-delete" n:href="delete, $book->id"><span class="glyphicon glyphicon-remove"></span></a>
-                                            <a class="row-edit" n:href="edit, $book->id"><span class="glyphicon glyphicon-edit"></span></a>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <td colspan="5">
-                                            <ul class="pagination pull-right"></ul>
-                                        </td>
-                                    </tr>
-                                </tfoot>
-                            </table>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    {form categoryForm}
+                    <h5>{label category_id /}</h5>{input category_id, class => "form-control ibox-select", onchange => "submit();"}
+                    {/form}
+                </div>
+                <div class="ibox-content">
+                    <table class="table table-striped table-bordered table-hover" id="booksTable" data-page-size="20" >
+                        <thead>
+                            <tr>
+                                <th class="wide noselect">Titul</th>
+                                <th class="noselect">Zkratka</th>
+                                <th class="noselect">Kategorie</th>
+                                <th data-sort-ignore="true" data-name="controls" class="controls"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr n:foreach="$books as $book">
+                                <td>{$book->title}</td>
+                                <td>{$book->abbreviation}</td>
+                                <td>{if $book->category_id}{$book->category->title}{/if}</td>
+                                <td class="controls">
+                                    <a class="row-edit" n:href="edit, $book->id"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="row-delete" n:href="delete, $book->id"><span class="glyphicon glyphicon-remove"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="5">
+                                    <ul class="pagination pull-right"></ul>
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
                 </div>
             </div>
         </div>
+    </div>
 {/block}
 {block scripts}
     <!-- FooTable -->
@@ -65,7 +59,7 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
-            initFooTable('#booksTable');
+            initFooTable('#booksTable', "Kniha byla smazána.", "Nelze smazat knihu dokud je ve výsledcích.");
         });
     </script>
 {/block}
