--- a/app/templates/Person/form.latte
+++ b/app/templates/Person/form.latte
@@ -1,4 +1,4 @@
-{block content}
+{block main}
 	<div class="row wrapper border-bottom white-bg page-heading slim">
 	    <div class="col-lg-10">
 	        <h2 n:block="title">Přidat osobu</h2>
