--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -9,7 +9,13 @@
 	}
 }
 
-ol.breadcrumb li.active {
+// prvek hlavního menu
+.metismenu .fa { 
+	margin-left: 2.5px;
+}
+
+// sekundární navigace pod nadpisem (aktivní prvek)
+ol.breadcrumb li.active { 
 	font-weight: bold;
 }
 
